Refactor th einit script in preparation for multiple domains

--- a/templates/default/glassfish-init.d-script.erb
+++ b/templates/default/glassfish-init.d-script.erb
@@ -7,17 +7,23 @@
 export AS_JAVA=<%= node["java"]["java_home"] %>
 
 start() {
-        echo -n "Starting Glassfish: "
-        echo "Starting Glassfish at `date`" >> <%= glassfish_home %>/domains/domain1/logs/startup.log
-        su <%= node[:glassfish][:user] %> -c "<%= glassfish_home %>/bin/asadmin start-domain --domaindir <%= node[:glassfish][:domains_dir] %> domain1" >> <%= glassfish_home %>/domains/domain1/logs/startup.log
+        echo -n "Starting Glassfish Domains: "
+        <% domain_name = "domain1" %>
+        <% log_file = "#{glassfish_home}/domains/#{domain_name}/logs/startup.log" %>
+        echo -n "<%= domain_name %> "
+        echo "Starting Glassfish at `date`" >> <%= log_file %>
+        su <%= node[:glassfish][:user] %> -c "<%= glassfish_home %>/bin/asadmin start-domain --domaindir <%= node[:glassfish][:domains_dir] %> <%= domain_name %>" >> <%= log_file %>
         sleep 2
         echo "done"
 }
 
 stop() {
-        echo -n "Stopping Glassfish: "
-        echo "Stopping Glassfish at `date`" >> <%= glassfish_home %>/domains/domain1/logs/startup.log
-        su <%= node[:glassfish][:user] %> -c "<%= glassfish_home %>/bin/asadmin stop-domain --domaindir <%= node[:glassfish][:domains_dir] %> domain1" >> <%= glassfish_home %>/domains/domain1/logs/startup.log
+        echo -n "Stopping Glassfish Domains: "
+        <% domain_name = "domain1" %>
+        <% log_file = "#{glassfish_home}/domains/#{domain_name}/logs/startup.log" %>
+        echo -n "<%= domain_name %> "
+        echo "Stopping Glassfish at `date`" >> <%= log_file %>
+        su <%= node[:glassfish][:user] %> -c "<%= glassfish_home %>/bin/asadmin stop-domain --domaindir <%= node[:glassfish][:domains_dir] %> <%= domain_name %>" >> <%= log_file %>
         echo "done"
 }
 
