--- a/templates/default/glassfish-init.d-script.erb
+++ b/templates/default/glassfish-init.d-script.erb
@@ -11,7 +11,7 @@ start() {
         <% log_file = "#{glassfish_home}/domains/#{@domain_name}/logs/startup.log" %>
         su <%= node[:glassfish][:user] %> -c "touch <%= log_file %>"
         echo "Starting Glassfish at `date`" >> <%= log_file %>
-        su <%= node[:glassfish][:user] %> -c "<%= glassfish_home %>/bin/asadmin start-domain --domaindir <%= node[:glassfish][:domains_dir] %> <%= @domain_name %>" >> <%= log_file %>
+        su <%= node[:glassfish][:user] %> -c "<%= @authbind ? "authbind –deep " : "" %><%= glassfish_home %>/bin/asadmin start-domain --domaindir <%= node[:glassfish][:domains_dir] %> <%= @domain_name %>" >> <%= log_file %>
         sleep 2
         echo "done"
 }
@@ -21,7 +21,7 @@ stop() {
         <% log_file = "#{glassfish_home}/domains/#{@domain_name}/logs/startup.log" %>
         su <%= node[:glassfish][:user] %> -c "touch <%= log_file %>"
         echo "Stopping Glassfish at `date`" >> <%= log_file %>
-        su <%= node[:glassfish][:user] %> -c "<%= glassfish_home %>/bin/asadmin stop-domain --domaindir <%= node[:glassfish][:domains_dir] %> <%= @domain_name %>" >> <%= log_file %>
+        su <%= node[:glassfish][:user] %> -c "<%= @authbind ? "authbind –deep " : "" %><%= glassfish_home %>/bin/asadmin stop-domain --domaindir <%= node[:glassfish][:domains_dir] %> <%= @domain_name %>" >> <%= log_file %>
         echo "done"
 }
 
