Sort the keys as they are output to ensure a consistent content is created over time

--- a/templates/default/accesscontrol.properties.erb
+++ b/templates/default/accesscontrol.properties.erb
@@ -4,6 +4,7 @@
 
 version=JMQFileAccessControlModel/100
 
+<% @rules.sort.each do |pattern,user| %>
 ##############################################
 # service connection access control
 ##############################################
@@ -15,6 +16,5 @@ connection.ADMIN.allow.group=admin
 #       Application Specific Settings
 ##############################################
 
-<% @rules.each_pair do |pattern,user| %>
 <%= pattern %>=<%= user %>
 <% end %>
