Make sure the imq log timzone is configured as per nodes timezone

--- a/templates/default/config.properties.erb
+++ b/templates/default/config.properties.erb
@@ -1,6 +1,8 @@
 imq.instanceconfig.version=300
 <%
 configs = {}
+  configs["imq.log.timezone"] = node["tz"] || "GMT"
+
   configs.merge!(@resource.config)
 
   bridges = []
