Make it posssible to configure the log levels emmitted to log subsystem

--- a/templates/default/config.properties.erb
+++ b/templates/default/config.properties.erb
@@ -2,6 +2,7 @@ imq.instanceconfig.version=300
 <%
 configs = {}
   configs["imq.log.timezone"] = node["tz"] || "GMT"
+  configs["imq.log.file.output"] = "ERROR|WARNING"
 
   configs.merge!(@resource.config)
 
