Stop regenerating the OpenMQ configuration file if the property values would not change. We can not rely on the format being the same as the server will rewrite the configuration file on startup.
This means that the OpenMQ server will not be restarted each chef run.

--- a/templates/default/config.properties.erb
+++ b/templates/default/config.properties.erb
@@ -1,45 +1,2 @@
 imq.instanceconfig.version=300
-<%
-configs = {}
-  configs["imq.log.timezone"] = node["tz"] || "GMT"
-  configs["imq.log.file.output"] = "ERROR|WARNING"
-
-  configs.merge!(@resource.config)
-
-  bridges = []
-  services = []
-
-  configs["imq.portmapper.port"] = @resource.port
-
-  if @resource.admin_port
-    services << "admin"
-    configs["imq.admin.tcp.port"] = @resource.admin_port
-  end
-
-  if @resource.jms_port
-    services << "jms"
-    configs["imq.jms.tcp.port"] = @resource.jms_port
-  end
-
-  if @resource.stomp_port
-    bridges << "stomp"
-    configs["imq.bridge.stomp.tcp.enabled"] = "true"
-    configs["imq.bridge.stomp.tcp.port"] = @resource.stomp_port
-  end
-
-  if services.size > 0
-    configs["imq.service.activelist"] = services.join(',')
-  end
-
-  configs["imq.bridge.admin.user"] = @resource.admin_user
-  user = @resource.users[@resource.admin_user]
-  raise "Missing user details for admin user '#{@resource.admin_user}'" unless user
-  configs["imq.bridge.admin.password"] = user[:password]
-  configs["imq.imqcmd.password"] = user[:password]
-
-  if bridges.size > 0
-    configs["imq.bridge.enabled"] = "true"
-    configs["imq.bridge.activelist"] = bridges.join(',')
-  end
-%>
-<%= configs.sort.collect { |k, v| "#{k}=#{v}\n" }.join("") %>
+<%= @configs.sort.collect { |k, v| "#{k}=#{v}\n" }.join("") %>
