--- a/templates/default/omq-upstart.conf.erb
+++ b/templates/default/omq-upstart.conf.erb
@@ -5,6 +5,9 @@ description     "GlassFish <%= @resource.instance %> OpenMQ server"
 start on filesystem or runlevel [2345]
 stop on runlevel [!2345]
 
+# Increase default timeout before killing (on stop) to 10 seconds
+kill timeout 10
+
 <% omq_home = "#{node[:glassfish][:base_dir]}/mq" %>
 <% authbind_prefix = @authbind ? "/usr/bin/authbind --deep " : "" %>
 
@@ -13,3 +16,19 @@ pre-start script
 end script
 
 exec su <%= node[:glassfish][:user] %> -c '<%= authbind_prefix %><%= omq_home %>/bin/imqbrokerd -vmargs "<%= @vmargs %>" -varhome <%= @resource.var_home %> -javahome <%= node["java"]["java_home"] %> -name "<%= @resource.instance %>"'
+
+# Uglies to wait until the broker is actually up before completion of the 'start'
+post-start script
+  while [ $(netstat -nl | grep -c 0.0.0.0:<%= @resource.port %>) -eq 0 ]
+  do
+    sleep 1
+  done
+end script
+
+# Uglies to wait until the broker is actually up before completion of the 'stop'
+post-stop script
+  while [ $(netstat -nl | grep -c 0.0.0.0:<%= @resource.port %>) -ne 0 ]
+  do
+    sleep 1
+  done
+end script
