--- a/templates/default/omq-upstart.conf.erb
+++ b/templates/default/omq-upstart.conf.erb
@@ -11,14 +11,14 @@ stop on runlevel [!2345]
 # Increase default timeout before killing (on stop) to 10 seconds
 kill timeout 10
 
-<% omq_home = "#{node[:glassfish][:base_dir]}/mq" %>
+<% omq_home = "#{node['glassfish']['base_dir']}/mq" %>
 <% authbind_prefix = @authbind ? "/usr/bin/authbind --deep " : "" %>
 
 pre-start script
     test -x <%= omq_home %>/bin/imqbrokerd || { stop; exit 0; }
 end script
 
-exec su <%= node[:glassfish][:user] %> -c '<%= authbind_prefix %><%= omq_home %>/bin/imqbrokerd -vmargs "<%= @vmargs %>" -varhome <%= @resource.var_home %> -javahome <%= node["java"]["java_home"] %> -name "<%= @resource.instance %>"'
+exec su <%= node['glassfish']['user'] %> -c '<%= authbind_prefix %><%= omq_home %>/bin/imqbrokerd -vmargs "<%= @vmargs %>" -varhome <%= @resource.var_home %> -javahome <%= node["java"]["java_home"] %> -name "<%= @resource.instance %>"'
 
 # Uglies to wait until the broker is actually up before completion of the 'start'
 post-start script
