--- a/templates/default/password.erb
+++ b/templates/default/password.erb
@@ -1,3 +1,3 @@
-AS_ADMIN_MASTERPASSWORD=<%= node[:glassfish][:password] %>
-AS_ADMIN_PASSWORD=<%= node[:glassfish][:domains][@domain_name][:config][:password] %>
+AS_ADMIN_MASTERPASSWORD=<%= node['glassfish'][:password] %>
+AS_ADMIN_PASSWORD=<%= node['glassfish']['domains'][@domain_name][:config][:password] %>
 
