Sort output in configuration files to avoid incorrect service restarts due to non-deterministic ordering.

--- a/templates/default/omq-upstart.conf.erb
+++ b/templates/default/omq-upstart.conf.erb
@@ -22,7 +22,7 @@ exec su <%= node['glassfish']['user'] %> -c '<%= authbind_prefix %><%= omq_home 
 
 # Uglies to wait until the broker is actually up before completion of the 'start'
 post-start script
-  <% @listen_ports.each do |listen_port| %>
+  <% @listen_ports.sort.each do |listen_port| %>
   while [ $(netstat -nl | grep -c '0.0.0.0:<%= listen_port %> ') -eq 0 ]
   do
     sleep 1
@@ -32,7 +32,7 @@ end script
 
 # Uglies to wait until the broker is actually up before completion of the 'stop'
 post-stop script
-  <% @listen_ports.each do |listen_port| %>
+  <% @listen_ports.sort.each do |listen_port| %>
   while [ $(netstat -nl | grep -c '0.0.0.0:<%= listen_port %> ') -ne 0 ]
   do
     sleep 1
