--- a/templates/default/omq-upstart.conf.erb
+++ b/templates/default/omq-upstart.conf.erb
@@ -12,7 +12,7 @@ stop on runlevel [!2345]
 kill timeout 10
 umask 0022
 
-<% omq_home = "#{node['glassfish']['base_dir']}/mq" %>
+<% omq_home = "#{node['glassfish']['install_dir']}/mq" %>
 <% authbind_prefix = @authbind ? "/usr/bin/authbind --deep " : "" %>
 
 pre-start script
