--- a/templates/default/glassfish-upstart-rhel.conf.erb
+++ b/templates/default/glassfish-upstart-rhel.conf.erb
@@ -28,7 +28,7 @@ chdir <%= config_dir %>
 # old version of upstart used on centos - setuid not supported
 # su -c will change both the effective user id and group id to that of the glassfish user.
 
-exec su -s /bin/sh -c 'exec "$0" "$@"' <%= node['glassfish']['user'] %> -- <%= @authbind ? "/usr/bin/authbind --deep " : "" %><%= node["java"]["java_home"] %>/bin/java <%= @args.join(' ') %>
+exec su -s /bin/sh -c 'exec "$0" "$@"' <%= node['glassfish']['user'] %> -- <%= @authbind ? '/usr/bin/authbind --deep ' : '' %><%= node['java']['java_home'] %>/bin/java <%= @args.join(' ') %>
 
 
 # Uglies to wait until the broker is actually up before completion of the 'start'
