--- a/templates/default/sv-glassfish-run.erb
+++ b/templates/default/sv-glassfish-run.erb
@@ -8,4 +8,4 @@ umask 0077
 export <% key %>=<% value %>
 <% end %>
 cd <%= node['glassfish']['domains_dir']%>/<%= @options[:resource].domain_name %>/config
-exec chpst -u <%= node['glassfish']['user'] %>:<%= node['glassfish']['group'] %> <%= @options[:authbind] ? "/usr/bin/authbind --deep " : "" %><%= node["java"]["java_home"] %>/bin/java <%= @options[:args].join(' ') %> 1>&2 >> /dev/null
+exec chpst -u <%= node['glassfish']['user'] %>:<%= node['glassfish']['group'] %> <%= @options[:authbind] ? '/usr/bin/authbind --deep ' : '' %><%= node['java']['java_home'] %>/bin/java <%= @options[:args].join(' ') %> 1>&2 >> /dev/null
