--- a/templates/default/init.d.erb
+++ b/templates/default/init.d.erb
@@ -1,4 +1,12 @@
 #!/bin/bash
+### BEGIN INIT INFO
+# Provides: glassfish-<%= @new_resource.domain_name %>
+# Required-Start:    $local_fs $syslog $remote_fs dbus
+# Required-Stop:     $local_fs $syslog $remote_fs
+# Default-Start:     2 3 4 5
+# Default-Stop:      0 1 6
+# Short-Description: Start Glassfish daemon
+### END INIT INFO
 #
 # chkconfig: 2345 90 5
 # description
