Support arrays of users for access control rules of `mq` resource.

--- a/templates/default/accesscontrol.properties.erb
+++ b/templates/default/accesscontrol.properties.erb
@@ -3,6 +3,6 @@
 #
 version=JMQFileAccessControlModel/100
 
-<% @rules.sort.each do |pattern,user| %>
-<%= pattern %>=<%= user %>
-<% end %>
+<% @rules.sort.each do |pattern,users| -%>
+<%= pattern %>=<%= (users.is_a?(Array) ? users : [users]).join(',') %>
+<% end -%>
