adds systemd start/stop timeout capability, fixes #93

--- a/templates/default/systemd.service.erb
+++ b/templates/default/systemd.service.erb
@@ -14,6 +14,8 @@ Type = forking
 Environment="<%= key %>=<%= value %>"
 <% end -%>
 <% end -%>
+TimeoutStartSec = <%= "#{@start_domain_timeout}" %>
+TimeoutStopSec = <%= "#{@stop_domain_timeout}" %>
 
 [Install]
 WantedBy = multi-user.target
