--- a/templates/default/init.d.ubuntu.erb
+++ b/templates/default/init.d.ubuntu.erb
@@ -1,7 +1,7 @@
 #!/bin/bash
 #
 ### BEGIN INIT INFO
-# Provides:          glassfish
+# Provides:          glassfish-<%= @new_resource.domain_name %>
 # Required-Start:    
 # Required-Stop:     
 # Should-Start:      $network $time
